Some stuff I won't take care anymore to write

--- a/protected/etcSample/sampleModule/sampleModule.yml
+++ b/protected/etcSample/sampleModule/sampleModule.yml
@@ -18,7 +18,7 @@ include:
 
 #numele templateului
 template: ""
-#numele fisierului de template
+#numele fisierului de template , default = numele modulului ex: sampleModule.html
 template_file: ""
 
 
