--- a/protected/etcSample/GENERAL/core/Acore.yml
+++ b/protected/etcSample/GENERAL/core/Acore.yml
@@ -4,21 +4,19 @@
 admin_MOD:
   TOOLbar: 1
   GEN_edit: 1
-  usrManager: 1
   EDITmode: 1
   page: 1
   single: 1
-  blog: 1
-  articles: 1
-  comments: 1
-  commGallery: 1
+  team: 1
+  portfolio: 1,
+  news: 1,
+  gallery: 1
 
 # modele instantiate automat la logarea ca admin
 ADMIN_default_GENERAL:
   - TOOLbar
   - GEN_edit
   - EDITmode
-  - usrManager
 
 ADMIN_default_PLUGINS: []
 ADMIN_default_MODELS: []
