--- a/protected/etcSample/GENERAL/core/Acore.yml
+++ b/protected/etcSample/GENERAL/core/Acore.yml
@@ -1,26 +1,26 @@
 ---
 # modelele care pot fii admistrabile
 # deci care au o clasa  in model / ADMIN / AC[model]
-admin_MOD:
+adminMods:
   TOOLbar: 1
   GEN_edit: 1
   EDITmode: 1
   page: 1
   single: 1
   team: 1
-  portfolio: 1,
-  news: 1,
+  portfolio: 1
+  news: 1
   gallery: 1
 
 # modele instantiate automat la logarea ca admin
-ADMIN_default_GENERAL:
+defaultAdmin_GENERAL:
   - TOOLbar
   - GEN_edit
   - EDITmode
 
-ADMIN_default_PLUGINS: []
-ADMIN_default_MODELS: []
-ADMIN_default_LOCALS: []
+defaultAdmin_PLUGINS: []
+defaultAdmin_MODELS: []
+defaultAdmin_LOCALS: []
 
 
 TMPtree: []
