--- a/protected/etcSample/GENERAL/core/tmpl_AonlineStore.yml
+++ b/protected/etcSample/GENERAL/core/tmpl_AonlineStore.yml
@@ -1,6 +1,6 @@
 ---
 #modelele care pot fii admistrabile deci care au o clasa AC[model]
-admin_MOD:
+adminMods:
   products: 1
   page: 1
   blog: 1
